# clrs

./: .gitignore  Cargo.toml  README.md  clrs-1f7fc5002dc34881.js  clrs-3420f0e41a20c19c.js  clrs-55336bb2233139fd.js  clrs-e6a4d2e5efc38a34.js  clrs-f25a16f750f163f3.js  clrs-ffe69d7334008826.js  index.html
.github/workflows/: release.yaml
assets/: defaults.levels.ron  defaults.palettes.ron  logo.aseprite
assets/textures/: expand.aseprite  fortify.aseprite  line.aseprite  nuke.aseprite  pulser.aseprite  scatter.aseprite
src/: audio.rs  camera.rs  color_system.rs  level_loader.rs  lib.rs  loading.rs  main.rs  map.rs  menu.rs  pathfinding.rs  player.rs
src/abilities/: expand.rs  fortify.rs  mod.rs  nuke.rs
src/actions/: game_control.rs  mod.rs
src/ai/: mod.rs
src/audio/: mod.rs
src/buildings/: building_pathfinding.rs  line.rs  mod.rs  pulser.rs  scatter.rs
src/draw/: draw.rs  mod.rs
src/framework/: mod.rs
src/game/: draw.rs  end_game.rs  game_difficulty.rs  mod.rs  restart_game.rs  state.rs
src/loading/: colors_loader.rs  mod.rs
src/mapping/: map.rs  mod.rs
src/objects/: mod.rs
src/ui/: dev.rs  end_game.rs  game.rs  menu.rs  mod.rs  pause.rs  settings_menu.rs
src/ui/components/: mod.rs
src/ui/widgets/: mod.rs
